--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -2,15 +2,25 @@
   background-color: #f6f6f8;
   height: 100vh;
   width: 100%;
-  padding: 16px;
+  padding: 0;
   box-sizing: border-box;
+  padding-top: 120px;
+  position: relative;
+  .topTime {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  .content {
+    padding: 16px;
+  }
 }
 .at-icon {
   font-size: 48px;
   color: #666;
 }
 .add-schedule {
-  position: absolute;
+  position: fixed;
   bottom: 40px;
   z-index: 10;
   right: 40px;
